[tool.poetry]
name = "fitmarv"
version = "0.1.0"
description = "Streamlit App fuer taeglichen Trainingsplan und Fortschritts-Tracking"
authors = ["Marvi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = ">=1.37.0,<2.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
